--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
 
     <%= stylesheet_link_tag    'application' %>
     <%= javascript_include_tag 'application' %>
+    
+    <!-- Chargement du sript drumkit.js  -->
+    <%= yield :head %>
+
   </head>
 
   <body>
