--- a/app/views/static/_drum_kit.html.erb
+++ b/app/views/static/_drum_kit.html.erb
@@ -1,40 +1,35 @@
-
 <div class="all_keys_container">
-  <%# <div data-key="81" class="one_key_container">
-    <kbd>Q 81<br/>Sound 01</kbd>
-    
-  </div> %>
 
   <div data-key="83" class="one_key_container">
-    <kbd>S 83<br/>Sound 02</kbd>
+    <kbd>S<br/>Do</kbd>
   </div>
 
   <div data-key="68" class="one_key_container">
-    <kbd>D 68<br/>Sound 03</kbd>
+    <kbd>D<br/>Ré</kbd>
   </div>
 
   <div data-key="70" class="one_key_container">
-    <kbd>F 70<br/>Sound 04</kbd>
+    <kbd>F<br/>Mi</kbd>
   </div>
 
   <div data-key="71" class="one_key_container">
-    <kbd>G 71<br/>Sound 05</kbd>
+    <kbd>G<br/>Fa</kbd>
   </div>
 
   <div data-key="72" class="one_key_container">
-    <kbd>H 72<br/>Sound XX</kbd>
+    <kbd>H<br/>Sol</kbd>
   </div>
 
   <div data-key="74" class="one_key_container">
-    <kbd>J 74<br/>Sound XX</kbd>
+    <kbd>J<br/>La</kbd>
   </div>
 
   <div data-key="75" class="one_key_container">
-    <kbd>K 75<br/>Sound XX</kbd>
+    <kbd>K<br/>Si</kbd>
   </div>
 
   <div data-key="76" class="one_key_container">
-    <kbd>L 76<br/>Sound XX</kbd>
+    <kbd>L<br/>Do</kbd>
   </div>
 
 
